# wake-alarm

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt  shutdown-wrapper.sh  sleep-hook.sh  wake-alarm.service
.github/workflows/: pre-commit.yml  python-tests.yml
scripts/: check_file_length.py
wake_alarm/: __init__.py  _alarm.py  _alarm_display.py  _audio.py  _challenges.py  _constants.py  _logging_setup.py  _smart_plug.py  _state.py  install.sh  shutdown-wrapper.sh  sleep-hook.sh  wake-alarm-fans.sh  wake-alarm.service  wake_state.json
wake_alarm/tests/: __init__.py  test_alarm.py  test_alarm_audio.py  test_alarm_challenges.py  test_alarm_display.py  test_alarm_part2.py  test_alarm_part3.py  test_alarm_part4.py  test_alarm_sinks.py  test_smart_plug.py  test_state.py
